--- a/Tarea 2 [Constanza Osses].tex
+++ b/Tarea 2 [Constanza Osses].tex
@@ -15,6 +15,7 @@
 \renewcommand\thesection{\arabic{section}}
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
 \usepackage[spanish,es-tabla]{babel}
+\usepackage{caption}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
@@ -31,54 +32,204 @@
 \affiliation{Doctorado en Ciencias F\'isicas, Pontificia Universidad Cat\'olica de Valpara\'{\i}so, Chile}
 
 \begin{abstract}
- holis
+ Este trabajo tiene por objetivo recrear el mapa del CMB a partir de un espectro de potencias dado. En la primera sección se pretende obtener dicho mapa, en la segunda secci\'on obtener el espectro de potencias a partir del mapa generado anteriormente, y finalmente, se obtendr\'an los valores de los par\'ametros $\Omega_b h^2$ y $\Omega_c h^2$ utilizados para generar el espectro de potencias original.
 \end{abstract}
 
 
 \maketitle
 \section{Introducción}
-- qué es el cmb
-- por que es importante
-- como se crean los mapas
-- como se obtiene el espectro a partir del mapa
-- como se obtienen los parámetros
 
+El estudio del Fondo C\'osmico de Microondas (CMB) \cite{cmb} ha otorgado la oportunidad de conocer m\'as a fondo el Universo. A trav\'es del CMB se pueden estudiar diferentes \'areas de la cosmolog\'ia como ondas gravitacionales primordiales, propiedades de los neitrinos y distribuciones de masas.
 
-\subsection{creando mapa}
+Adem\'as el CMB nos proporciona la mejor evidencia que respalda la teor\'ia del Big Bang debido a su gran uniformidad y sus peque\~nas anisotrop\'ias. 
+
+De su espectro de potencias, se puede obtener informaci\'on valiosa: el primer peak est\'a relacionado con la curvatura del Universo, el segundo y tercer peak se relacionan con la densidad de bariones y materia oscura respectivamente??????
+
+Por otro lado,, el CMB est\'a polarizado en dos tipos: modos E y modos B. El modo E surge de la dispersi\'on de Thomson en el plasma mientras que el modo B puede surgir tanto de lentes gravitacionales producidos por los modos E como de ondas gravitacionales primordiales.
+
+Diversos experimentos se han realizado con el objetivo de mejorar las mediciones del CMB tales como COBE, WMAP, Planck, ACT, SPT y BICEP/Keck Array.
+
+En este trabajo se estudiar\'an las fluctuaciones de temperatura a trav\'es del espectro angular de potencias de temperatura de la siguiente manera: en §\ref{datos} se describen los datos utilizados, en §\ref{analisis} se describe el procedimiento utilizado para llevar a cabo los objetivos, en §\ref{resultados} se exponen los resultados obtenidos y finalmente se concluye con una discusi\'on en §\ref{discusion}.
+
+\section{Datos}\label{datos}
+
+Los datos utilizados provienen del \textit{Code for Anisotropies in the Microwave Background (CAMB)} que est\'a basado en el CMBFast \citep{cmbfast}. Este c\'odigo es usado para calcular los espectros de potencias de temperatura y polariazaci\'on del CMB, espectros angulares, funciones de transferencia entre otros.
+
+ En este c\'odigo existen diferentes componentes del espectro de potencias: total, unlensed\_scalar, unlensed\_total, lensed\_scalar, tensor, lens\_potential. Trabajaremos s\'olo con la componente unlensed\_scalar.
+
+El espectro de potencias se origina con ciertos par\'ametros iniciales, de los cuales debemos identificar los valores de los par\'ametros de densidad bari\'onica ($\Omega_b\,h^2$) y de materia oscura ($\Omega_c\,h^2$)
+
+\section{An\'alisis}\label{analisis}
+
+\subsection{Mapa CMB}\label{mapa}
+
+Queremos obtener el mapa del CMB en 2D, para ello, primero debemos obtener el mapa en espacio real a partir de los datos entregados por el espectro original.
+A partir de los datos entregados del espectro original, se puede obtener una grilla 
 \begin{equation}
 \tilde{\mathbf{M}}(\ell_x,\ell_y)=C\left(\sqrt{\ell_x^2 + \ell_y^2}\right)
 \end{equation}
+
+Para cada par de datos de $\ell_x, \ell_y$ se obtiene un valor asociado dado por el espectro de potencias original.
+
+Se debe ir rellenando la grilla con los correspondientes valores de $C(\sqrt{\ell_x^2 + \ell_y^2})$. Se debe tomar en cuenta que los valores entregados para cada momento multipolar corresponden a una cantidad $D_{\ell}$ multiplicada por un factor, entonces
+
+\begin{equation}
+C_{\ell} = \frac{2\pi\,D_{\ell}}{\ell\,(\ell+1)}
+\end{equation}
+
+Esta funci\'on nos otorga el mapa del CMB para el espacio real.
+
+Como el espectro de potencias se genera de fluctuaciones primordiales de tipo gaussiana, es necesario introducir una funci\'on de distribuci\'on gaussiana al espectro final en el espacio de Fourier, de tal manera que
 
 \begin{equation}
 \mathbf{M}\left(\theta_{x}, \theta_{y}\right)=\int d \ell_{x} \int d \ell_{y} \exp \,[-2 i(\vec{\ell} \cdot \vec{\theta})] \,\tilde{\mathbf{M}}\left(\ell_{x}, \ell_{y}\right)\, \tilde{\mathbf{G}}\left(\ell_{x}, \ell_{y}\right)
 \end{equation}
 
+donde 
 \begin{equation}
 \tilde{\mathbf{G}}\left(\ell_{x}, \ell_{y}\right)=\int d \ell_{x} \int d \ell_{y} \,\exp\, [-2 i(\vec{\ell} \cdot \vec{\theta})] \,\mathcal{N}(\mu, \sigma)
 \end{equation}
 
-\subsection{creando espectro}
+Se debe tener en cuenta que los momentos multipolares se relacionan con el \'angulo en el cielo de la siguiente manera: $\ell=\frac{2\pi}{\theta}$
+
+\subsection{Espectro de Potencias}\label{espectro}
+
+Como existen problemas de discontinuidad en los bordes del mapa generado en la secci\'on anterior, es necesario apodizarlo, es decir, multiplicarlo con una funci\'on ventana. Para contrarrestar el efecto de los bordes, esta funci\'on debe decaer a cero suavemente. 
 
 \begin{equation}
 \mathbf{M}_{\text {apod }}\left(\theta_{x}, \theta_{y}\right)=\mathbf{M}\left(\theta_{x}, \theta_{y}\right) \circ \mathbf{W}\left(\theta_{x}, \theta_{y}\right)
 \end{equation}
+donde $\circ$ es el producto de Hadamard.
 
+Una vez obtenido el mapa apodizado, se procede a calcular el mapa en espacio real, de tal forma que
 \begin{equation}
 \tilde{\mathbf{M}}\left(\ell_{x}, \ell_{y}\right)=\operatorname{FFT}\left(\mathbf{M}_{\text {apod }}\left(\theta_{x}, \theta_{y}\right)\right)
 \end{equation}
+
+Con este mapa se pueden ir calculando los coeficientes $C_\ell$ del espectro, de modo que se promedie para cada anillo con momento multipolar constante y se eleve al cuadrado 
 
 \begin{equation}
 C_{\ell}\left(\sqrt{\ell_{x}^{2}+\ell_{y}^{2}}\right)=\left\langle\tilde{\mathbf{M}}\left(\ell_{x}, \ell_{y}\right)\right\rangle
 \end{equation}
 
+Se debe tener en cuenta la relaci\'on entre $D_{\ell}$ y $C_{\ell}$ dada por la ec. (3.2).
+
+Si bien esta ecuaci\'on nos entregar\'a un espectro de potencias, se debe corregir debido a algunos errores que son causados por la apodizaci\'on. Estos errores se corrigen mediante la siguiente ecuaci\'on
+
 \begin{equation}
 \hat{D}_{\ell}=T_{\ell} * D_{\ell}+N_{\ell}
 \end{equation}
-
+donde $\hat{D}_{\ell}$ es el espectro a partir del mapa, $D_{\ell}$ es el espectro real, $T_{\ell}$ es la funci\'on de transferencia, y $N_{\ell}$ es el sesgo de ruido.
+Por lo tanto, se puede construir el espectro de potencias real obteniendo los valores de la siguiente manera
 \begin{equation}
 D_{\ell}=\frac{\left(\hat{D}_{\ell}-N_{\ell}\right)}{T_{\ell}}
 \end{equation}
 
 
+\subsection{Par\'ametros de densidad}\label{parametros}
+
+Para obtener un espectro igual o similiar al espectro original, se debe iterar sobre los par\'ametros de densidad del paquete otorgado por CAMB. Teniendo los datos para cada espectro generado, se puede calcular una prueba de independencia entre las distribuciones a trav\'es de $\chi^2$
+
+\begin{equation}
+\chi^2 = \displaystyle\sum_{i} \frac{(x_{i,obs} - x_{i,teo})^2}{x_{i,teo}}
+\end{equation}
+
+donde $x_{obs}$ es el valor de un punto en el espectro observado y $x_{teo}$ es el valor de un punto en el espectro original.
+
+Este test indica que mientras menor sea el valor $\chi^2$, existe una mayor probabilidad de que ambas distribuciones sean iguales. Es decir, para obtener los valores de los par\'ametros de densidad es necesario que el valor de $\chi^2$ normalizado por los grados de libertad (dof = n\'umero de datos - par\'ametros libres - 1) al comparar el espectro resultante con el otriginal, sea lo m\'as cercano a cero posible.
+
+
+\section{Resultados}\label{resultados}
+
+\begin{center}
+   \includegraphics[width=85mm]{spectrum_original2.png}\\
+   Figura 1.\emph{\ Espectro original.}
+\end{center}
+  
+
+
+\subsection{Mapa CMB}
+
+\begin{center}
+   \includegraphics[width=85mm]{M_tilde.png}\\
+   Figura 2.\emph{\ Mapa en espacio real.}
+\end{center}
+
+\begin{center}
+   \includegraphics[width=85mm]{G_ell.png}\\
+   Figura 3.\emph{\ Transformada de Fourier en 2 dimensiones.}
+\end{center}
+
+\begin{center}
+   \includegraphics[width=85mm]{M_tetha.png}\\
+   Figura 4.\emph{\ Mapa en espacio de Fourier.}
+\end{center}
+
+\subsection{Espectro de Potencias}
+
+\subsection{Par\'ametros de densidad}
+
+Para obtener los espectros, se modific\'o el c\'odigo otorgado por CAMB. En primera instancia, se iter\'o 10 veces sobre cada par\'amtro entre 0.005 y 0.150. Se compar\'o cada espectro resultante con el original, obtenieno el valor de $\chi^2$ normalizado por los grados de libertad (dof = 5046). La Tabla 1 muestra los valores de $\Omega_b h^2$, $\Omega_b h^2$ con sus respectivos $chi^2$ , con valores de $\chi^2<100000$. Luego, se realiz\'o el mismo procedimiento, escogiendo ahora un rango de los par\'ametros cercanos a los valores que entregaban resultados m\'as bajos de $\chi^2$, entonces, se iteraron 10 veces los par\'ametros: $0.05<\Omega_b h^2< 0.075$ y $0.05<\Omega_c h^2<0.150$. La Tabla 2 muestra los valores de los par\'ametros para valores de $\chi^2<10000$. De la misma forma, se iter\'o nuevamente 10 veces: $0.058<\Omega_b h^2< 0.064$ y $0.090<\Omega_c h^2<0.107$. La Tabla 3 muestra los resutados para $\chi^2<3000$
+
+\begin{center}
+\begin{tabular}{| c | c | c | c |}\hline
+$\Omega_b h^2$ & $\Omega_c h^2$ & $\chi^2$ & $\chi^2/$grados de libertad    \\ \hline
+	\hspace{0.1cm}0.0533  & \hspace{0.1cm}0.0694  &  \hspace{0.1cm}90448.6914\hspace{0.1cm}  &  17.9248 \\
+	0.0533  & 0.0856  &  19162.9253  &  3.7976 \\
+	0.0533  & 0.1017  &  27735.4469  &  5.4965 \\
+	0.0533  & 0.1178  &  75457.1964  & 14.9539 \\
+	0.0694  & 0.1017  &  55901.4234  & 11.0784 \\
+	0.0694  & 0.1178  &  30447.5212  &  6.0339 \\
+	0.0694  & 0.1339  &  35793.6990  &  7.0935 \\
+	0.0694  & 0.1500  &  58884.4855  & 11.6695 \\ \hline
+\end{tabular}\label{tabla1}
+\captionof{table}{Mejores resultados de $\chi^2$ para las primeras 10 iteraciones:$0.05<\Omega_b h^2$, $\Omega_b h^2<0.150$. En la primera columna se muestran los valores del par\'ametro de densidad bari\'onica $\Omega_b h^2$, en la segunda columna, el par\'ametro de densidad de materia oscura $\Omega_c h^2$, la tercera columna corresponde a los valores de $\chi^2$ y en la cuarta columna se muestran los valores de $\chi^2$ normalizados por los grados de libertad. El mejor resultado del test ($\chi^2/dof = 3.7976$) corresponde a $\Omega_b h^2=0.0533$ y $\Omega_c h^2=0.0856$.}
+\end{center}
+
+
+
+%\begin{center}
+%\begin{tabular}{| c | c | c | c |}\hline
+%$\Omega_b h^2$ & $\Omega_c h^2$ & $\chi^2$ & $\chi^2/$grados de libertad \\ \hline%
+%	\hspace{0.1cm}0.0556  & \hspace{0.1cm}0.0944 & \hspace{0.1cm}7888.2522 & 1.5629   \\%
+%	0.0583  & 0.0944 & 4566.9923 & 0.9049   \%\
+%	0.0583  & 0.1056 & 7420.5199 & 1.4703   \\
+%	0.0611  & 0.1056 & 3480.1545 & 0.6895   \\
+%	0.0639  & 0.1056 & 8553.8800 & 1.6948   \\\hline
+%\end{tabular}\label{tabla2}
+%\captionof{table}{Mejores valores para las nuevas 10 iteraciones: $0.05<\Omega_b h^2<0.075$ y $0.05<\Omega_b h^2<0.150$. El mejor valor del test es $\chi^2/dof = 0.6895$, lo cual corresponde a $\Omega_b h^2=0.0611$ y $\Omega_c h^2=0.1056$.}
+%\end{center}
+
+\begin{center}
+\begin{tabular}{| c | c | c | c |}\hline
+$\Omega_b h^2$ & $\Omega_c h^2$ & $\chi^2$ & $\chi^2/$grados de libertad       \\ \hline
+	\hspace{0.1cm}0.0587   & \hspace{0.1cm}0.0976 & \hspace{0.1cm}2928.4361  & 0.5803  \\
+	0.0592   & 0.0998 & 2497.2344  & 0.4949  \\
+	0.0597   & 0.1002 & 2452.5220  & 0.4860  \\
+	0.0597   & 0.1006 & 2427.5886  & 0.4811  \\
+	0.0597   & 0.1010 & 2436.7352  & 0.4829  \\
+	0.0597   & 0.1014 & 2471.5026  & 0.4898   \\\hline
+\end{tabular}\label{tabla3}
+\captionof{table}{Mejores resultados para las nuevas 10 iteraciones: $0.058<\Omega_b h^2<0.064$ y $0.090<\Omega_b h^2<0.107$. El mejor valor del test es $\chi^2/dof = 0.4811$, lo cual corresponde a $\Omega_b h^2=0.0597$ y $\Omega_c h^2=0.1006$.}
+\end{center}
+
+Los dos mejores resultados expuestos en la Tabla 3 se grafican junto al espectro original en la Fig. ??. En concordacia con los resultados obtenidos a trav\'es del test $\chi^2$, el espectro que m\'as se ajusta a la curva del espectro original corresponde a los valores $\Omega_b h^2=0.0600$ y $\Omega_c h^2=0.1013$. Si bien no ajustan perfectamente porque en el primer peak el espectro resultantes est\'a levemente por encima del origianl, mientras que en el segundo peak est\'a un poco por deabajo. Esto quiere decir
+\begin{center}
+   \includegraphics[width=85mm]{comparacion.png}\\
+   Figura ??.\emph{\ Comparaci\'on entre los espectros obtenidos con el original. La l\'inea negra representa el espectro original mientras que la l\'inea verde y roja representan los espectros obtenidos con los par\'ametros $\Omega_b h^2$=0.0600 y $\Omega_c h^2$= 0.1013 y $\Omega_b h^2$=0.0593 y $\Omega_c h^2$= 0.0994 respectivamente. Se puede observar en el gr\'afico, que la curva que m\'as se asemeja al espectro original es la verde.}
+\end{center}
+
+\begin{center}
+   \includegraphics[width=85mm]{comparacion2.png}\\
+   Figura ??.\emph{\ Comparaci\'on entre los espectros obtenidos con el original. La l\'inea negra representa el espectro original mientras que la l\'inea verde representa el espectro con los mejores valores para los par\'ametros: $\Omega_b h^2$=0.0600 y $\Omega_c h^2$= 0.1013.}
+\end{center}
+
+
+
+\section{Discusi\'on}\label{discusion}
+
+
+
+\bibliography{referencias}
 
 \end{document}
