--- a/Tarea 2 [Constanza Osses].tex
+++ b/Tarea 2 [Constanza Osses].tex
@@ -295,9 +295,11 @@ En la Fig. 2 se muestra los anillos equivalentes a $\ell_x$ y $\ell_y$ constante
 Se realiz\'o el c\'alculo de los nuevos valores para $D_\ell$, sin embargo la funci\'on de transferncia no se logr\'o obtener.
 
 
+En cuanto a los valores de los par\'ametros, se pudieron obtener valores de los par\'ametros de densidad de $\Omega_b h^2 = 0.0597$ y $\Omega_c h^2 = 1.1006$ con valor de $\chi^2$ normalizado de $\chi^2/dof = 0.4811$. Si comparamos estos valores con los entregados por Planck, que son los que aparecen originalmente en el paquete de CAMB ($\Omega_b h^2 = 0.022$ y $\Omega_c h^2 = 1.122$), existe una diferencia del $\sim 17 \%$.
+
+Finalmente, este mapa es una recreaci\'on de un mapa generado realmente por el CMB, puesto que s\'olo se tiene en consideraci\'on la parte que no involucra lentes gravitacionales, por lo que se deben considerar los modos E.
 
 
-En cuanto a los valores de los par\'ametros, se pudieron obtener valores de los par\'ametros de densidad de $\Omega_b h^2 = 0.0597$ y $\Omega_c h^2 = 1.1006$ con valor de $\chi^2$ normalizado de $\chi^2/dof = 0.4811$
 
 
 
