--- a/tarea2_parte1y2.ipynb
+++ b/tarea2_parte1y2.ipynb
@@ -263,7 +263,7 @@
     "norm = mpl.colors.BoundaryNorm(bounds, cmap.N)\n",
     "plt.imshow(M_theta.real, cmap=cmap)\n",
     "scale_factor = 2*pi*57.2958 #pasando a grados\n",
-    "xmin = scale_factor/36\n",
+    "xmin = scale_factor/36 # usando un ell de 36, se obtiene un ángulo de ~10°\n",
     "xmax = scale_factor/3085\n",
     "ymin = scale_factor/36\n",
     "ymax = scale_factor/3085\n",
