--- a/Tarea 2 [Constanza Osses].tex
+++ b/Tarea 2 [Constanza Osses].tex
@@ -162,7 +162,7 @@ donde los momentos multipolares var\'ian entre $2\leq\ell\leq 5049$. Tanto el mo
 
 \subsection{Mapa CMB}
 
-De los datos del espectro original, tomamos la columna $D_{\ell}$, la transformamos en $C_{\ell}$ de acuerdo a la ec. (3.2) e iteramos dos veces sobre un rango determinado para formar la matriz en 2 dimensiones. El rango m\'aximo de los elementos de la iteraci\'on est\'a dictaminado por la resoluci\'on de nuestro mapa. En este caso, la resoluci\'on es de 7' lo cual nos entrega $\ell_{max}=3086$. Se debe tener en cuenta que el valor m\'aximo de $\ell$ es 5049, por lo que si el m\'odulo de las dos variables es mayor, el elemento correspondiente de la matriz es cero. El mapa en espacio real se puede apreciar en la Fig. ????. En \'el, podemos ver anilos con un cierto valor constante de $C_{\ell}$ el cual va disminuyendo a medida que aumentan los momentos multipolares.
+De los datos del espectro original, tomamos la columna $D_{\ell}$, la transformamos en $C_{\ell}$ de acuerdo a la ec. (3.2) e iteramos dos veces sobre un rango determinado para formar la matriz en 2 dimensiones. El rango m\'aximo de los elementos de la iteraci\'on est\'a dictaminado por la resoluci\'on de nuestro mapa. En este caso, la resoluci\'on es de 7' lo cual nos entrega $\ell_{max}=3086$. Se debe tener en cuenta que el valor m\'aximo de $\ell$ es 5049, por lo que si el m\'odulo de las dos variables es mayor, el elemento correspondiente de la matriz es cero. El mapa en espacio real se puede apreciar en la Fig. 2. En \'el, podemos ver anilos con un cierto valor constante de $C_{\ell}$ el cual va disminuyendo a medida que aumentan los momentos multipolares.
 Se debe destacar adem\'as, que el primer anillo comienza en $\ell\sim 100-125$, lo cual coincide bastante bien con el primer peak del espectro original.
 
 \begin{center}
