--- a/Tarea 2 [Constanza Osses].tex
+++ b/Tarea 2 [Constanza Osses].tex
@@ -193,7 +193,7 @@ Al reescalar el mapa para convertir los ejes en grados y la temperatura del orde
 
 \subsection{Espectro de Potencias}
 
-Ahora queremos obtener el espectro de potencias a partir del mapa anterior. Para ello, primero se debe escoger una funci\'on ventana que no decaiga muy r\'apido a cero. En este trabajo, se escogi\'o la funci\'on ventana de Hann.
+Ahora queremos obtener el espectro de potencias a partir del mapa anterior. Para ello, primero se debe escoger una funci\'on ventana que no decaiga muy r\'apido a cero. En este trabajo, se escogi\'o la funci\'on ventana de Hann puesto que en $\sim 90 \%$ de los casos en las que se usa, tiene resultados favorables.
 
 \begin{center}
    \includegraphics[width=85mm]{window.png}\\
